--- a/index.html
+++ b/index.html
@@ -1,15 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>E-Commerce Web</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Home</title>
 </head>
+
 <body>
-    
+
+    <header class="header">
+
+        <a href="home.html">LOGO</a>
+
+        <nav class="navbar">
+            <ul>
+                <li><a href="home.html">home</a></li>
+                <li><a href="products.html">products</a></li>
+                <li><a href="#">pages +</a>
+                    <ul>
+                        <li><a href="about.html">about</a></li>
+                        <li><a href="blogs.html">blogs</a></li>
+                    </ul>
+                </li>
+                <li><a href="contact.html">contact</a></li>
+                <li><a href="#">account +</a>
+                    <ul>
+                        <li><a href="login.html">login</a></li>
+                        <li><a href="register.html">register</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+
+        <div class="icons">
+            <div id="menu-btn" class="fas fa-bars"></div>
+            <div id="search-btn" class="fas fa-search"></div>
+            <a href="cart.html" class="fas fa-shopping-cart"></a>
+        </div>
+
+    </header>
+
 
 
     <script src="script.js"></script>
 </body>
+
 </html>
