--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header class="header">
 
-        <a href="home.html">LOGO</a>
+        <a href="home.html" class="logo">LOGO</a>
 
         <nav class="navbar">
             <ul>
@@ -44,6 +44,8 @@
         </div>
 
     </header>
+
+    
 
 
 
