--- a/index.html
+++ b/index.html
@@ -43,9 +43,14 @@
             <a href="cart.html" class="fas fa-shopping-cart"></a>
         </div>
 
+        <form action="" class="search-form">
+            <input type="search" id="search-box" placeholder="search here...">
+          
+        </form>
+
     </header>
 
-    
+
 
 
 
