--- a/index.html
+++ b/index.html
@@ -51,7 +51,29 @@
     </header>
 
 
-
+    <section class="home">
+        <div class="slide" style="background: url(img/home1.jpg) no-repeat;">
+            <div class="content">
+                <span>Stylish rain protection</span>
+                <h3>upto 50% off</h3>
+                <a href="#" class="btn">shop now</a>
+            </div>
+        </div>
+        <div class="slide" style="background: url(img/home2.jpg) no-repeat;">
+            <div class="content">
+                <span>Stylish rain protection</span>
+                <h3>upto 50% off</h3>
+                <a href="#" class="btn">shop now</a>
+            </div>
+        </div>
+        <div class="slide" style="background: url(img/home3.jpg) no-repeat;">
+            <div class="content">
+                <span>Stylish rain protection</span>
+                <h3>upto 50% off</h3>
+                <a href="#" class="btn">shop now</a>
+            </div>
+        </div>
+    </section>
 
 
 
@@ -120,3 +142,7 @@
 </body>
 
 </html>
+
+<!--
+sass --watch style.scss:style.css
+-->
