--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
     <section class="home">
-        <div class="slide" style="background: url(img/home1.jpg) no-repeat;">
+        <div class="slide active" style="background: url(img/home1.jpg) no-repeat;">
             <div class="content">
                 <span>Stylish rain protection</span>
                 <h3>upto 50% off</h3>
