--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                 <a href="#" class="btn">shop now</a>
             </div>
         </div>
+
+        <div id="next-slide" class="fas fa-angle-right" onclick="next()"></div>
+        <div id="prev-slide" class="fas fa-angle-left" onclick="prev()"></div>
     </section>
 
 
