--- a/index.html
+++ b/index.html
@@ -79,6 +79,33 @@
     </section>
 
 
+    <section class="banner">
+        <div class="box">
+            <img src="img/home1.jpg" alt="">
+            <div class="content">
+                <span>special offer</span>
+                <h3>uppto 50% off</h3>
+                <a href="#" class="btn">shop now</a>
+            </div>
+        </div>
+        <div class="box">
+            <img src="img/home1.jpg" alt="">
+            <div class="content">
+                <span>special offer</span>
+                <h3>uppto 50% off</h3>
+                <a href="#" class="btn">shop now</a>
+            </div>
+        </div>
+        <div class="box">
+            <img src="img/home1.jpg" alt="">
+            <div class="content">
+                <span>special offer</span>
+                <h3>uppto 50% off</h3>
+                <a href="#" class="btn">shop now</a>
+            </div>
+        </div>
+    </section>
+
 
 
 
