--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <section class="banner">
         <div class="box">
-            <img src="img/home1.jpg" alt="">
+            <img src="img/banner1.jpg" alt="">
             <div class="content">
                 <span>special offer</span>
                 <h3>uppto 50% off</h3>
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="img/home1.jpg" alt="">
+            <img src="img/banner2.jpg" alt="">
             <div class="content">
                 <span>special offer</span>
                 <h3>uppto 50% off</h3>
@@ -97,7 +97,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="img/home1.jpg" alt="">
+            <img src="img/banner3.jpg" alt="">
             <div class="content">
                 <span>special offer</span>
                 <h3>uppto 50% off</h3>
