--- a/about.html
+++ b/about.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Home</title>
+    <title>About</title>
 </head>
 
 <body>
 
     <header class="header">
 
-           <a href="index.html" class="logo">LOGO</a>
+        <a href="index.html" class="logo">LOGO</a>
 
         <nav class="navbar">
             <ul>
@@ -51,63 +51,11 @@
     </header>
 
 
-    <section class="home">
-        <div class="slide active" style="background: url(img/home1.jpg) no-repeat;">
-            <div class="content">
-                <span>Stylish rain protection</span>
-                <h3>upto 50% off</h3>
-                <a href="#" class="btn">shop now</a>
-            </div>
-        </div>
-        <div class="slide" style="background: url(img/home2.jpg) no-repeat;">
-            <div class="content">
-                <span>Stylish rain protection</span>
-                <h3>upto 50% off</h3>
-                <a href="#" class="btn">shop now</a>
-            </div>
-        </div>
-        <div class="slide" style="background: url(img/home3.jpg) no-repeat;">
-            <div class="content">
-                <span>Stylish rain protection</span>
-                <h3>upto 50% off</h3>
-                <a href="#" class="btn">shop now</a>
-            </div>
-        </div>
 
-        <div id="next-slide" class="fas fa-angle-right" onclick="next()"></div>
-        <div id="prev-slide" class="fas fa-angle-left" onclick="prev()"></div>
-    </section>
-
-
-    <section class="banner">
-        <div class="box">
-            <img src="img/banner1.jpg" alt="">
-            <div class="content">
-                <span>special offer</span>
-                <h3>uppto 50% off</h3>
-                <a href="#" class="btn">shop now</a>
-            </div>
-        </div>
-        <div class="box">
-            <img src="img/banner2.jpg" alt="">
-            <div class="content">
-                <span>special offer</span>
-                <h3>uppto 50% off</h3>
-                <a href="#" class="btn">shop now</a>
-            </div>
-        </div>
-        <div class="box">
-            <img src="img/banner3.jpg" alt="">
-            <div class="content">
-                <span>special offer</span>
-                <h3>uppto 50% off</h3>
-                <a href="#" class="btn">shop now</a>
-            </div>
-        </div>
-    </section>
-
-
-
+<section class="heading">
+    <h1>about us</h1>
+    <p> <a href="home.html"></a> >> about</p>
+</section>
 
 
 
