--- a/products.html
+++ b/products.html
@@ -15,11 +15,11 @@
 
     <header class="header">
 
-        <a href="home.html" class="logo">LOGO</a>
+        <a href="index.html" class="logo">LOGO</a>
 
         <nav class="navbar">
             <ul>
-                <li><a href="home.html">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="products.html">products</a></li>
                 <li><a href="#">pages +</a>
                     <ul>
@@ -52,7 +52,10 @@
 
 
 
-
+    <section class="heading">
+        <h1>our products</h1>
+        <p> <a href="home.html"></a> >> products</p>
+    </section>
 
 
 
@@ -68,7 +71,7 @@
 
             <div class="box">
                 <h3>quick links</h3>
-                <a href="home.html"> <i class="fas fa-angle-right"></i> home</a>
+                <a href="index.html"> <i class="fas fa-angle-right"></i> home</a>
                 <a href="products.html"> <i class="fas fa-angle-right"></i> products</a>
                 <a href="about.html"> <i class="fas fa-angle-right"></i> about</a>
                 <a href="blogs.html"> <i class="fas fa-angle-right"></i> blogs</a>
