heading section style

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 
 <section class="heading">
     <h1>about us</h1>
-    <p> <a href="home.html"></a> >> about</p>
+    <p> <a href="index.html">home</a> >> about</p>
 </section>
 
 
