--- a/blogs.html
+++ b/blogs.html
@@ -54,7 +54,7 @@
 
 <section class="heading">
     <h1>our blogs</h1>
-    <p> <a href="home.html"></a> >> blogs</p>
+    <p> <a href="index.html">home</a> >> blogs</p>
 </section>
 
 
