--- a/cart.html
+++ b/cart.html
@@ -54,7 +54,7 @@
 
     <section class="heading">
         <h1>shopping cart</h1>
-        <p> <a href="home.html"></a> >> cart</p>
+        <p> <a href="index.html">home</a> >> cart</p>
     </section>
 
 
