--- a/register.html
+++ b/register.html
@@ -54,7 +54,7 @@
 
 <section class="heading">
     <h1>account</h1>
-    <p> <a href="home.html"></a> >> register</p>
+    <p> <a href="index.html">home</a> >> register</p>
 </section>
 
 
