--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 
 <section class="heading">
     <h1>contact us</h1>
-    <p> <a href="home.html"></a> >> contact</p>
+    <p> <a href="index.html">home</a> >> contact</p>
 </section>
 
 
