--- a/products.html
+++ b/products.html
@@ -54,7 +54,7 @@
 
     <section class="heading">
         <h1>our products</h1>
-        <p> <a href="home.html"></a> >> products</p>
+        <p> <a href="index.html">home</a> >> products</p>
     </section>
 
 
