start products sec

--- a/products.html
+++ b/products.html
@@ -58,6 +58,229 @@
     </section>
 
 
+    <section class="products">
+        <h1 class="title">our featured products</h1>
+        <div class="box-container">
+
+            <div class="box">
+
+                <div class="image">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-share"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <img src="img/p.png" alt="">
+                </div>
+
+                <div class="content">
+                    <h3>premium umbrellas</h3>
+                    <div class="stars">
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star-half-alt"></a>
+                    </div>
+                    <div class="price">$30 <span>$40</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+
+                <div class="image">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-share"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <img src="img/p.png" alt="">
+                </div>
+
+                <div class="content">
+                    <h3>premium umbrellas</h3>
+                    <div class="stars">
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star-half-alt"></a>
+                    </div>
+                    <div class="price">$30 <span>$40</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+
+                <div class="image">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-share"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <img src="img/p.png" alt="">
+                </div>
+
+                <div class="content">
+                    <h3>premium umbrellas</h3>
+                    <div class="stars">
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star-half-alt"></a>
+                    </div>
+                    <div class="price">$30 <span>$40</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+
+                <div class="image">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-share"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <img src="img/p.png" alt="">
+                </div>
+
+                <div class="content">
+                    <h3>premium umbrellas</h3>
+                    <div class="stars">
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star-half-alt"></a>
+                    </div>
+                    <div class="price">$30 <span>$40</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+
+                <div class="image">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-share"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <img src="img/p.png" alt="">
+                </div>
+
+                <div class="content">
+                    <h3>premium umbrellas</h3>
+                    <div class="stars">
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star-half-alt"></a>
+                    </div>
+                    <div class="price">$30 <span>$40</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+
+                <div class="image">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-share"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <img src="img/p.png" alt="">
+                </div>
+
+                <div class="content">
+                    <h3>premium umbrellas</h3>
+                    <div class="stars">
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star-half-alt"></a>
+                    </div>
+                    <div class="price">$30 <span>$40</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+
+                <div class="image">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-share"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <img src="img/p.png" alt="">
+                </div>
+
+                <div class="content">
+                    <h3>premium umbrellas</h3>
+                    <div class="stars">
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star-half-alt"></a>
+                    </div>
+                    <div class="price">$30 <span>$40</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+
+                <div class="image">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-share"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <img src="img/p.png" alt="">
+                </div>
+
+                <div class="content">
+                    <h3>premium umbrellas</h3>
+                    <div class="stars">
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star-half-alt"></a>
+                    </div>
+                    <div class="price">$30 <span>$40</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+
+                <div class="image">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-share"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <img src="img/p.png" alt="">
+                </div>
+
+                <div class="content">
+                    <h3>premium umbrellas</h3>
+                    <div class="stars">
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star"></a>
+                        <a href="#" class="fas fa-star-half-alt"></a>
+                    </div>
+                    <div class="price">$30 <span>$40</span></div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
 
 
 
