--- a/products.html
+++ b/products.html
@@ -59,7 +59,7 @@
 
 
     <section class="products">
-        <h1 class="title">our featured products</h1>
+        <h1 class="title">featured products</h1>
         <div class="box-container">
 
             <div class="box">
