--- a/about.html
+++ b/about.html
@@ -52,11 +52,57 @@
 
 
 
-<section class="heading">
-    <h1>about us</h1>
-    <p> <a href="index.html">home</a> >> about</p>
-</section>
+    <section class="heading">
+        <h1>about us</h1>
+        <p> <a href="index.html">home</a> >> about</p>
+    </section>
 
+
+    <section class="about">
+
+        <h1 class="title">why choose us?</h1>
+
+        <div class="row">
+
+            <div class="image">
+                <img src="img/banner1.jpg" alt="">
+            </div>
+
+            <div class="content">
+                <h3>the best umbrellas sellers</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora cum dolorem adipisci unde
+                    sunt distinctio enim ad rerum dignissimos.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consequuntur reprehenderit iste
+                    iusto ipsum? Magnam similique consequatur molestias saepe commodi.</p>
+                    <a href="#" class="btn">read more</a>
+            </div>
+
+        </div>
+
+        <div class="icons-container">
+            <div class="icons">
+                <img src="img/p.png" alt="">
+                <p>all sizes</p>
+            </div>
+            <div class="icons">
+                <img src="img/p.png" alt="">
+                <p>free delivery</p>
+            </div>
+            <div class="icons">
+                <img src="img/p.png" alt="">
+                <p>easy returns</p>
+            </div>
+            <div class="icons">
+                <img src="img/p.png" alt="">
+                <p>easy payments</p>
+            </div>
+            <div class="icons">
+                <img src="img/p.png" alt="">
+                <p>24/7 support</p>
+            </div>
+        </div>
+
+    </section>
 
 
 
