--- a/about.html
+++ b/about.html
@@ -74,26 +74,26 @@
                     sunt distinctio enim ad rerum dignissimos.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consequuntur reprehenderit iste
                     iusto ipsum? Magnam similique consequatur molestias saepe commodi.</p>
-                    <a href="#" class="btn">read more</a>
+                <a href="#" class="btn">read more</a>
             </div>
 
         </div>
 
         <div class="icons-container">
             <div class="icons">
-                <img src="img/p.png" alt="">
+                <img src="img/i1.png" alt="">
                 <p>all sizes</p>
             </div>
             <div class="icons">
-                <img src="img/p.png" alt="">
+                <img src="img/i2.png" alt="">
                 <p>free delivery</p>
             </div>
             <div class="icons">
-                <img src="img/p.png" alt="">
+                <img src="img/i3.png" alt="">
                 <p>easy returns</p>
             </div>
             <div class="icons">
-                <img src="img/p.png" alt="">
+                <img src="img/i4.png" alt="">
                 <p>easy payments</p>
             </div>
             <div class="icons">
