--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         <div class="row">
 
             <div class="image">
-                <img src="img/banner1.jpg" alt="">
+                <img src="img/about.jpg" alt="">
             </div>
 
             <div class="content">
