--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
                 <p>easy payments</p>
             </div>
             <div class="icons">
-                <img src="img/p.png" alt="">
+                <img src="img/i5.png" alt="">
                 <p>24/7 support</p>
             </div>
         </div>
