--- a/blogs.html
+++ b/blogs.html
@@ -15,7 +15,7 @@
 
     <header class="header">
 
-    <a href="index.html" class="logo">LOGO</a>
+        <a href="index.html" class="logo">LOGO</a>
 
         <nav class="navbar">
             <ul>
@@ -52,12 +52,104 @@
 
 
 
-<section class="heading">
-    <h1>our blogs</h1>
-    <p> <a href="index.html">home</a> >> blogs</p>
-</section>
+    <section class="heading">
+        <h1>our blogs</h1>
+        <p> <a href="index.html">home</a> >> blogs</p>
+    </section>
+
+    <section class="blogs">
+        <div class="box">
+            <div class="image">
+                <img src="img/blog1.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>blog title goes here...</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
+                <a href="#" class="btn">read more</a>
+                <div class="icons">
+                    <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
+                    <a href="#"><i class="fas fa-user"></i> by admin</a>
+                </div>
+            </div>
+        </div>
+
+          <div class="box">
+            <div class="image">
+                <img src="img/blog2.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>blog title goes here...</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
+                <a href="#" class="btn">read more</a>
+                <div class="icons">
+                    <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
+                    <a href="#"><i class="fas fa-user"></i> by admin</a>
+                </div>
+            </div>
+        </div>
 
 
+          <div class="box">
+            <div class="image">
+                <img src="img/blog3.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>blog title goes here...</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
+                <a href="#" class="btn">read more</a>
+                <div class="icons">
+                    <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
+                    <a href="#"><i class="fas fa-user"></i> by admin</a>
+                </div>
+            </div>
+        </div>
+
+          <div class="box">
+            <div class="image">
+                <img src="img/blog4.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>blog title goes here...</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
+                <a href="#" class="btn">read more</a>
+                <div class="icons">
+                    <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
+                    <a href="#"><i class="fas fa-user"></i> by admin</a>
+                </div>
+            </div>
+        </div>
+
+          <div class="box">
+            <div class="image">
+                <img src="img/blog5.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>blog title goes here...</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
+                <a href="#" class="btn">read more</a>
+                <div class="icons">
+                    <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
+                    <a href="#"><i class="fas fa-user"></i> by admin</a>
+                </div>
+            </div>
+        </div>
+
+
+          <div class="box">
+            <div class="image">
+                <img src="img/blog6.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>blog title goes here...</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
+                <a href="#" class="btn">read more</a>
+                <div class="icons">
+                    <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
+                    <a href="#"><i class="fas fa-user"></i> by admin</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
@@ -71,7 +163,7 @@
 
             <div class="box">
                 <h3>quick links</h3>
-               <a href="index.html"> <i class="fas fa-angle-right"></i> home</a>
+                <a href="index.html"> <i class="fas fa-angle-right"></i> home</a>
                 <a href="products.html"> <i class="fas fa-angle-right"></i> products</a>
                 <a href="about.html"> <i class="fas fa-angle-right"></i> about</a>
                 <a href="blogs.html"> <i class="fas fa-angle-right"></i> blogs</a>
