--- a/blogs.html
+++ b/blogs.html
@@ -58,94 +58,97 @@
     </section>
 
     <section class="blogs">
-        <div class="box">
-            <div class="image">
-                <img src="img/blog1.jpg" alt="">
-            </div>
-            <div class="content">
-                <h3>blog title goes here...</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
-                <a href="#" class="btn">read more</a>
-                <div class="icons">
-                    <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
-                    <a href="#"><i class="fas fa-user"></i> by admin</a>
+        <h1 class="title">our daily posts</h1>
+        <div class="boxes">
+            <div class="box">
+                <div class="image">
+                    <img src="img/blog1.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>blog title goes here...</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
+                    <a href="#" class="btn">read more</a>
+                    <div class="icons">
+                        <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
+                        <a href="#"><i class="fas fa-user"></i> by admin</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-          <div class="box">
-            <div class="image">
-                <img src="img/blog2.jpg" alt="">
-            </div>
-            <div class="content">
-                <h3>blog title goes here...</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
-                <a href="#" class="btn">read more</a>
-                <div class="icons">
-                    <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
-                    <a href="#"><i class="fas fa-user"></i> by admin</a>
+            <div class="box">
+                <div class="image">
+                    <img src="img/blog2.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>blog title goes here...</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
+                    <a href="#" class="btn">read more</a>
+                    <div class="icons">
+                        <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
+                        <a href="#"><i class="fas fa-user"></i> by admin</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
 
-          <div class="box">
-            <div class="image">
-                <img src="img/blog3.jpg" alt="">
-            </div>
-            <div class="content">
-                <h3>blog title goes here...</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
-                <a href="#" class="btn">read more</a>
-                <div class="icons">
-                    <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
-                    <a href="#"><i class="fas fa-user"></i> by admin</a>
+            <div class="box">
+                <div class="image">
+                    <img src="img/blog3.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>blog title goes here...</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
+                    <a href="#" class="btn">read more</a>
+                    <div class="icons">
+                        <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
+                        <a href="#"><i class="fas fa-user"></i> by admin</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-          <div class="box">
-            <div class="image">
-                <img src="img/blog4.jpg" alt="">
-            </div>
-            <div class="content">
-                <h3>blog title goes here...</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
-                <a href="#" class="btn">read more</a>
-                <div class="icons">
-                    <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
-                    <a href="#"><i class="fas fa-user"></i> by admin</a>
+            <div class="box">
+                <div class="image">
+                    <img src="img/blog4.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>blog title goes here...</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
+                    <a href="#" class="btn">read more</a>
+                    <div class="icons">
+                        <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
+                        <a href="#"><i class="fas fa-user"></i> by admin</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-          <div class="box">
-            <div class="image">
-                <img src="img/blog5.jpg" alt="">
-            </div>
-            <div class="content">
-                <h3>blog title goes here...</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
-                <a href="#" class="btn">read more</a>
-                <div class="icons">
-                    <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
-                    <a href="#"><i class="fas fa-user"></i> by admin</a>
+            <div class="box">
+                <div class="image">
+                    <img src="img/blog5.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>blog title goes here...</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
+                    <a href="#" class="btn">read more</a>
+                    <div class="icons">
+                        <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
+                        <a href="#"><i class="fas fa-user"></i> by admin</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
 
-          <div class="box">
-            <div class="image">
-                <img src="img/blog6.jpg" alt="">
-            </div>
-            <div class="content">
-                <h3>blog title goes here...</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
-                <a href="#" class="btn">read more</a>
-                <div class="icons">
-                    <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
-                    <a href="#"><i class="fas fa-user"></i> by admin</a>
+            <div class="box">
+                <div class="image">
+                    <img src="img/blog6.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>blog title goes here...</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, hic!</p>
+                    <a href="#" class="btn">read more</a>
+                    <div class="icons">
+                        <a href="#"><i class="fas fa-clock"></i> 7 may,2024</a>
+                        <a href="#"><i class="fas fa-user"></i> by admin</a>
+                    </div>
                 </div>
             </div>
         </div>
