start html of contact

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
     <header class="header">
 
-          <a href="index.html" class="logo">LOGO</a>
+        <a href="index.html" class="logo">LOGO</a>
 
         <nav class="navbar">
             <ul>
@@ -52,12 +52,23 @@
 
 
 
-<section class="heading">
-    <h1>contact us</h1>
-    <p> <a href="index.html">home</a> >> contact</p>
-</section>
+    <section class="heading">
+        <h1>contact us</h1>
+        <p> <a href="index.html">home</a> >> contact</p>
+    </section>
 
-
+    <section class="contact">
+        <h1 class="title">get in touch</h1>
+        <div class="row">
+            <form action="">
+                <input type="text" class="box" placeholder="Your name">
+                <input type="email" class="box" placeholder="Your email">
+                <input type="number" class="box" placeholder="Your number">
+                <textarea name="" id="" placeholder="your message" cols="30" rows="10"></textarea>
+                <input type="submit" value="send message" class="btn">
+            </form>
+        </div>
+    </section>
 
 
 
@@ -71,7 +82,7 @@
 
             <div class="box">
                 <h3>quick links</h3>
-              <a href="index.html"> <i class="fas fa-angle-right"></i> home</a>
+                <a href="index.html"> <i class="fas fa-angle-right"></i> home</a>
                 <a href="products.html"> <i class="fas fa-angle-right"></i> products</a>
                 <a href="about.html"> <i class="fas fa-angle-right"></i> about</a>
                 <a href="blogs.html"> <i class="fas fa-angle-right"></i> blogs</a>
