--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 
     <header class="header">
 
-            <a href="index.html" class="logo">LOGO</a>
+        <a href="index.html" class="logo">LOGO</a>
 
         <nav class="navbar">
             <ul>
@@ -52,12 +52,31 @@
 
 
 
-<section class="heading">
-    <h1>account</h1>
-    <p> <a href="index.html">home</a> >> login</p>
-</section>
+    <section class="heading">
+        <h1>account</h1>
+        <p> <a href="index.html">home</a> >> login</p>
+    </section>
 
-
+    <section class="login-form">
+        <form action="">
+            <h3>user login</h3>
+            <div class="inputBox">
+                <span class="fas fa-user"></span>
+                <input type="email" placeholder="enter your email">
+            </div>
+            <div class="inputBox">
+                <span class="fas fa-lock"></span>
+                <input type="password" placeholder="enter your password">
+            </div>
+            <input type="submit" value="sign in" class="btn">
+            <div class="flex">
+                <input type="checkbox" id="remember-me">
+                <label for="remember-me">remember me</label>
+                <a href="#">forgot password</a>
+            </div>
+            <a href="register.html" class="btn">create an account</a>
+        </form>
+    </section>
 
 
 
@@ -71,7 +90,7 @@
 
             <div class="box">
                 <h3>quick links</h3>
-                  <a href="index.html"> <i class="fas fa-angle-right"></i> home</a>
+                <a href="index.html"> <i class="fas fa-angle-right"></i> home</a>
                 <a href="products.html"> <i class="fas fa-angle-right"></i> products</a>
                 <a href="about.html"> <i class="fas fa-angle-right"></i> about</a>
                 <a href="blogs.html"> <i class="fas fa-angle-right"></i> blogs</a>
