--- a/register.html
+++ b/register.html
@@ -52,13 +52,35 @@
 
 
 
-<section class="heading">
-    <h1>account</h1>
-    <p> <a href="index.html">home</a> >> register</p>
-</section>
+    <section class="heading">
+        <h1>account</h1>
+        <p> <a href="index.html">home</a> >> register</p>
+    </section>
 
 
-
+    <section class="register-form">
+        <form action="">
+            <h3>register now</h3>
+            <div class="inputBox">
+                <span class="fas fa-user"></span>
+                <input type="text" placeholder="enter your name">
+            </div>
+            <div class="inputBox">
+                <span class="fas fa-envelope"></span>
+                <input type="email" placeholder="enter your email">
+            </div>
+            <div class="inputBox">
+                <span class="fas fa-lock"></span>
+                <input type="password" placeholder="enter your password">
+            </div>
+              <div class="inputBox">
+                <span class="fas fa-lock"></span>
+                <input type="password" placeholder="confirm your password">
+            </div>
+            <input type="submit" value="sign up" class="btn">
+            <a href="login.html" class="btn">already have an account</a>
+        </form>
+    </section>
 
 
 
@@ -71,7 +93,7 @@
 
             <div class="box">
                 <h3>quick links</h3>
-              <a href="index.html"> <i class="fas fa-angle-right"></i> home</a>
+                <a href="index.html"> <i class="fas fa-angle-right"></i> home</a>
                 <a href="products.html"> <i class="fas fa-angle-right"></i> products</a>
                 <a href="about.html"> <i class="fas fa-angle-right"></i> about</a>
                 <a href="blogs.html"> <i class="fas fa-angle-right"></i> blogs</a>
