--- a/login.html
+++ b/login.html
@@ -68,7 +68,8 @@
                 <span class="fas fa-lock"></span>
                 <input type="password" placeholder="enter your password">
             </div>
-            <input type="submit" value="sign in" class="btn">
+            <div class="inputBox"> <input type="submit" value="sign in" class="btn"></div>
+           
             <div class="flex">
                 <input type="checkbox" id="remember-me">
                 <label for="remember-me">remember me</label>
