html of login and register

--- a/login.html
+++ b/login.html
@@ -68,12 +68,12 @@
                 <span class="fas fa-lock"></span>
                 <input type="password" placeholder="enter your password">
             </div>
-            <div class="inputBox"> <input type="submit" value="sign in" class="btn"></div>
+          <input type="submit" value="sign in" class="btn">
            
             <div class="flex">
                 <input type="checkbox" id="remember-me">
                 <label for="remember-me">remember me</label>
-                <a href="#">forgot password</a>
+                <a href="#">forgot password?</a>
             </div>
             <a href="register.html" class="btn">create an account</a>
         </form>
