--- a/register.html
+++ b/register.html
@@ -77,9 +77,9 @@
                 <span class="fas fa-lock"></span>
                 <input type="password" placeholder="confirm your password">
             </div>
-            <div class="inputBox">    <input type="submit" value="sign up" class="btn"></div>
+          <input type="submit" value="sign up" class="btn">
         
-            <a href="login.html" >already have an account</a>
+            <a href="login.html" class="btn">already have an account</a>
         </form>
     </section>
 
