--- a/cart.html
+++ b/cart.html
@@ -57,6 +57,97 @@
         <p> <a href="index.html">home</a> >> cart</p>
     </section>
 
+    <section class="shopping-cart">
+        <h1 class="title">your products</h1>
+        <div class="box-container">
+            <div class="box">
+                <i class="fas fa-times"></i>
+                <img src="img/c1.png" alt="">
+                <div class="content">
+                    <h3>premium umbrellas</h3>
+                    <form action="">
+                        <span>quantity :</span>
+                        <input type="number" value="1">
+                    </form>
+                    <div class="price">
+                        $30.00 <span>$35.00</span>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="box">
+                <i class="fas fa-times"></i>
+                <img src="img/c1.png" alt="">
+                <div class="content">
+                    <h3>premium umbrellas</h3>
+                    <form action="">
+                        <span>quantity :</span>
+                        <input type="number" value="1">
+                    </form>
+                    <div class="price">
+                        $30.00 <span>$35.00</span>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="box">
+                <i class="fas fa-times"></i>
+                <img src="img/c1.png" alt="">
+                <div class="content">
+                    <h3>premium umbrellas</h3>
+                    <form action="">
+                        <span>quantity :</span>
+                        <input type="number" value="1">
+                    </form>
+                    <div class="price">
+                        $30.00 <span>$35.00</span>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="box">
+                <i class="fas fa-times"></i>
+                <img src="img/c1.png" alt="">
+                <div class="content">
+                    <h3>premium umbrellas</h3>
+                    <form action="">
+                        <span>quantity :</span>
+                        <input type="number" value="1">
+                    </form>
+                    <div class="price">
+                        $30.00 <span>$35.00</span>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="box">
+                <i class="fas fa-times"></i>
+                <img src="img/c1.png" alt="">
+                <div class="content">
+                    <h3>premium umbrellas</h3>
+                    <form action="">
+                        <span>quantity :</span>
+                        <input type="number" value="1">
+                    </form>
+                    <div class="price">
+                        $30.00 <span>$35.00</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <h1 class="title">checkout cart</h1>
+        <div class="cart-total">
+            <h3>subtotal : <span>$100.00</span></h3>
+            <h3>total : <span>$100.00</span></h3>
+            <a href="#" class="btn">proceed to checkout</a>
+        </div>
+    </section>
+
 
 
 
